--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,13 @@
             <version>2.5.1</version>
         </dependency>
 
+        <!-- JAXB API -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
