宿管用户---报修详情

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -91,4 +91,4 @@ upload:
   # imagePath: /data/upload/images
   imagePath: D:\code\dl\SchoolRoomSys\src\main\resources\images
   # 图片访问URL前缀
-  imageUrlPrefix: http://localhost:8080/images
+  imageUrlPrefix: http://localhost:8080/SchoolRoomSys/images
